# Sieci

./: CMakeLists.txt  Client.h  Constants.h  HttpRequest.cpp  HttpRequest.h  HttpResponse.h  Makefile  NetworkEntity.cpp  NetworkEntity.h  README.md  Server.cpp  Server.h  client  client.cpp  http  main  main.cpp  makefile  readME.md  test  test.cpp  tmp
include/: Constants.h  HeaderInterpreters.h  HttpRequest.h  HttpResponse.h  MethodFactory.h  MethodGET.h  MethodHEAD.h  MethodInterface.h  MethodPOST.h  NetworkHeaders.h  SendMessageException.h
serverRoot/: testFile.txt
src/: Client.cpp  HeaderInterpreters.cpp  HttpRequest.cpp  HttpResponse.cpp  MethodFactory.cpp  MethodGET.cpp  MethodHEAD.cpp  MethodPOST.cpp  NetworkEntity.cpp  Server.cpp  main.cpp
tests/: test1.txt  testBADREQ  testDIR  testGET  testHEAD  testMod  testNOFILE  testNOTMOD  testPOST  testPUT
